--- a/config/typus/20100421184337_application.yml
+++ b/config/typus/20100421184337_application.yml
@@ -5,7 +5,7 @@
 Image:
   fields:
     list: description, image, section
-    form: description, image_file_name, section
+    form: description, image_file_name
   order_by: 
   relationships: 
   filters: 
@@ -19,6 +19,6 @@ Tienda:
   order_by: 
   relationships: images
   filters: 
-  search: 
+  search: nombre, direccion
   application: palsofa
 
