--- a/config/typus/typus.yml
+++ b/config/typus/typus.yml
@@ -13,4 +13,4 @@ TypusUser:
   filters: status, role
   search: first_name, last_name, email, role
   application: Typus
-  description: System Users Administration
+  description: Usuarios administradores
