--- a/config/typus/typus.yml
+++ b/config/typus/typus.yml
@@ -12,5 +12,5 @@ TypusUser:
         status: Active, Inactive
   filters: status, role
   search: first_name, last_name, email, role
-  application: Typus
+  application: Administradores
   description: Usuarios administradores
