--- a/config/typus/application.yml
+++ b/config/typus/application.yml
@@ -3,7 +3,7 @@
 Product:
   fields:
     list: name, price
-    form: name, description, price, other, category_list, special_list
+    form: name, description, price, other
   order_by: 
   relationships: images
   filters: 
